Fix bug in Client and Host Event Handling and add JVM opts in run script